--- a/life/Sal_and_Dee.html
+++ b/life/Sal_and_Dee.html
@@ -233,11 +233,15 @@ I'd helped her stand and, still aswoon, she'd said:  "Tap-dancing Christ."&ensp;
 rolled Sal out, not in a bag.&ensp;Walking close behind was Dee, in a hoodie and black sweat pants.&ensp;
 I realized that was how she was always dressed.&ensp;
 She was intently nibbling along the inside of her thumb, pausing every couple of seconds to inspect her work.&ensp;
-Two paramedics pushed the gurney 
-into their rig, and then one of them extended a hand to help Dee up and in.&ensp;
-She wiped her spit on her pant leg first.&ensp;
-Another medic closed the rear doors and got behind the wheel.&ensp;The ambulance made a multi-point turn because 
-the fire engine was in the way.&ensp;It sped away, lights and siren.&ensp;
+The two paramedics pushed the gurney 
+into the back of their rig and one climbed in.&ensp;
+His partner closed the rear door.&ensp;He noticed me as he got behind the wheel.&ensp;
+On the passenger side Dee wiped her spit on her pant leg before getting in.&ensp;
+Seated, she turned to look into the back.&ensp;The driver had her buckle up
+and started a multi-point turn because the fire engine was in the way.&ensp;
+At one point Dee looked through her window at the cop cars, Sal's cruiser in the driveway,
+her house in that particular light.&ensp;First evening of all the rest.&ensp;
+Then they were gone.&ensp;
 <br/>&emsp;I grabbed a beer.&ensp;
 <br/>&emsp;"What's happening?"&ensp;
 <br/>&emsp;"Sal got brought out of his house on a stretcher.&ensp;Dee went with."&ensp;
@@ -251,7 +255,7 @@ Once past the light show he waved and I raised my bottle.&ensp;
 <br/>&emsp;"Sal got taken out on a stretcher."&ensp;
 <br/>&emsp;He grabbed a Rock and popped the cap using the bottom of his Bic.&ensp;"We still grillin'?"&ensp;
 <br/>&emsp;"Ready to go."&ensp;I thought about it.&ensp;"But maybe we shouldn't do it out front this time.&ensp;
-If neighbors come, it might seem--"&ensp;
+If neighbors come, it might seem&mdash;"&ensp;
 <br/>&emsp;"Like entertainment."&ensp;
 <br/>&emsp;"Yeah."&ensp;
 <br/>&emsp;"What's the word?"&ensp;
@@ -269,21 +273,21 @@ and closed the door.&ensp;
 <br/>&emsp;I put a finger against my lips.&ensp;"I used it."&ensp;
 <br/>&emsp;He glanced from me toward the back yard, probably thinking that Beverly seemed okay.&ensp;
 <br/>&emsp;I tipped my head.&ensp;
-<br/>&emsp;"You--" he started to say.&ensp;
+<br/>&emsp;"You&mdash;" he started to say.&ensp;
 <br/>&emsp;I nodded.&ensp;I said, "He was beating on Dee.&ensp;Really bad."&ensp;
-<br/>&emsp;His eyes moved around as he worked it from different angles.&ensp;"And you fuckin'--"&ensp;
+<br/>&emsp;His eyes moved around as he worked it from different angles.&ensp;"And you fuckin'&mdash;"&ensp;
 <br/>&emsp;I nodded.&ensp;
 <br/>&emsp;"Where?"&ensp;
 <br/>&emsp;"Lower back I think."&ensp;
 <br/>&emsp;"No, you ... where's the gun."&ensp;
 <br/>&emsp;"I threw it in the orchard."&ensp;
-<br/>&emsp;"You--"&ensp;
+<br/>&emsp;"You&mdash;"&ensp;
 <br/>&emsp;I held up a hand.&ensp;"I know.&ensp;I need to find it."&ensp;
-<br/>&emsp;"You--it's registered to me!"&ensp;
+<br/>&emsp;"You&mdash;it's registered to me!"&ensp;
 <br/>&emsp;"I know.&ensp;We need to dump it."&ensp;
 <br/>&emsp;"We?"&ensp;
 <br/>&emsp;"I'm sorry, Bill.&ensp;Sincerely, man.&ensp;I've made trouble for you here.&ensp;I know that."&ensp;
-I took a breath while he stayed quiet.&ensp;"And I should be--I'm asking for your help.&ensp;
+I took a breath while he stayed quiet.&ensp;"And I should be&mdash;I'm asking for your help.&ensp;
 I figure it might take both of us to remove the serial number tonight.&ensp;
 The bench grinder can't keep a secret."&ensp;I saw him picturing it:  fast, but really noisy.&ensp;
 Somebody'd want to know why they had to crank the volume on the TV.&ensp;Or want to kibbitz while watching sparks fly.&ensp;
