--- a/life/Sal_and_Dee.html
+++ b/life/Sal_and_Dee.html
@@ -307,7 +307,13 @@ It helped that it was so shiny.&ensp;Bill extracted the shells and pocketed them
 a weird area at the southern tip of the San Francisco Bay.&ensp;To remove the number we ended up
 using a hammer and punch set.&ensp;After an early bad swing that nearly broke my finger and sent a
 punch flying past his face and out into the weeds, we held the punch in place with locking pliers.&ensp;
-It took about two hours.&ensp;When the number was gone Bill removed the spent shell from his pocket
+<br/>&emsp;An hour in, with about half the serial number pounded to oblivion, Bill asked:  "So, how bad was it?&ensp;
+Like, she was bleeding?&ensp;Was she screaming for help?"&ensp;
+<br/>&emsp;We took a break as I described what I'd heard and then seen, every step through chucking the Colt,
+an objective confession during which I paused to consider:  the open patio door, 
+the constraint of wounds between neckline and knees, the public appearances, opportunities.&ensp;
+<br/>&emsp;Bill levered his trucker's cap and put it back on.&ensp;"Damn.&ensp;Yeah.&ensp;Shit."&ensp;T-shirt or tombstone.&ensp;
+<br/>&emsp;When the number was gone Bill removed the spent shell from his pocket
 and ceremoniously wiped it, flicked open the Colt, inserted it, and wiped again, rags in both hands.&ensp;
 I handed the big screwdriver to him.&ensp;
 <br/>&emsp;"Your gun," I said.&ensp;"Should be you."&ensp;
