--- a/life/Equal_and_Opposite.html
+++ b/life/Equal_and_Opposite.html
@@ -28,7 +28,7 @@ with the clutch in."&ensp;
 <br/>&emsp;"Think you could've taken him, though?"&ensp;
 <br/>&emsp;"No.&ensp;It was like, Newtonian."&ensp;
 <br/>&emsp;"Huh?"&ensp;
-<br/>&emsp;"Equal and opposite.&ensp;Like, his moving forward pushed the rest of the world backward."&ensp;
+<br/>&emsp;"Equal and opposite.&ensp;Like, his moving forward shoved the rest of the world backward."&ensp;
 <br/>&emsp;"I suppose that does actually happen.&ensp;A teensy little bit, anyway."&ensp;
 <br/>&emsp;"That's was I was thinking.&ensp;Like all our footsteps, cars and trucks stopping and starting, cheetahs
 taking off after zebras&mdash;"&ensp;
